--- a/index.html
+++ b/index.html
@@ -125,6 +125,6 @@
         </tr>
     </table>
     <img src="index.jpg">
-    <iframe src="http://sectorbotmd.gq"></iframe>
+    <iframe src="https://khushi-jain-774.github.io/learning-html/"></iframe>
 </body>
 </html>
